2005-09-16  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_progressbar_trough): Fix progressbar shadow in Firefox.

2005-09-16  Richard A. Stellingwerff  <remenic@gmail.com>

	* themes/Clearlooks/gtk-2.0/gtkrc: Fix statusbar breakage.

2005-09-16  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_button), (clearlooks_draw_entry),
	(clearlooks_draw_progressbar_fill): Slightly lighter border on disabled
	buttons.
	* engines/clearlooks/src/clearlooks_style.c: (draw_handle),
	(draw_box), (draw_option), (draw_check): Fixed prelight checkbuttons.
	Unknown handles are drawn properly now. 

2005-09-14  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c: (draw_option),
	(draw_check): Disabled radio/check buttons are sooo pretty now!

2005-09-14  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_normal_arrow), (clearlooks_draw_combo_arrow),
	(_clearlooks_draw_arrow), (clearlooks_draw_arrow):
	* engines/clearlooks/src/clearlooks_style.c: (draw_shadow),
	(draw_box), (draw_arrow): Fixed arrow drawing.

2005-09-13  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_button), (clearlooks_draw_entry): Slightly more contrast.
	* engines/clearlooks/src/clearlooks_style.c: (draw_handle): Properly
	handle orientation.

2005-09-13  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_inset), (clearlooks_draw_button),
	(clearlooks_draw_entry), (clearlooks_draw_scale_trough),
	(clearlooks_draw_progressbar_trough):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_init_from_rc):
	* themes/Clearlooks/gtk-2.0/gtkrc:

	Fixed the shades calculations and did some polishing.

2005-09-12  Richard A. Stellingwerff  <remenic@gmail.com>
