@@ -1,3 +1,14 @@
+2005-10-10  Richard A. Stellingwerff  <remenic@gmail.com>
+
+	* engines/clearlooks/src/clearlooks_draw.c:
+	(clearlooks_draw_inset), (clearlooks_draw_button),
+	(clearlooks_draw_entry), (clearlooks_draw_menu_frame):
+	* engines/clearlooks/src/clearlooks_style.c: (draw_box),
+	(draw_option), (draw_check), (clearlooks_style_init_from_rc):
+	* themes/Clearlooks/gtk-2.0/gtkrc:
+
+	Improved colors and such. Possibly other things, too :)
+
 2005-09-16  Richard A. Stellingwerff  <remenic@gmail.com>
 
 	* engines/clearlooks/src/clearlooks_draw.c:
